style.css
/* ... */
.container-lg {
	max-width: 1200px;
}

.container-xl {
	max-width: 1400px;
}

.container-xxl {
	max-width: 1600px;
	z-index: 1;
}

.btn-primary { 
	background-color: var(--secondary-color);
	color: var(--white-color);
	border-radius: 0;
	border: none;
	padding: 10px 60px 10px 60px;
	font-family: var(--primary-font);
	transition: 0.4s;
	position: relative;
}

.btn-primary:hover { 
	background-color: var(--primary-color) !important;
	transition: 0.4s;
}


.btn-secondary { 
	background-color: var(--white-color);
	color: var(--primary-color);
	border-radius: 0;
	border: none;
	padding: 10px 60px 10px 60px;
	font-family: var(--primary-font);
	transition: 0.4s;
	position: relative;
}

.btn-secondary:hover { 
	background-color: var(--secondary-color) !important;
	transition: 0.4s;
}


.read-more {
	position: relative;
	transition: .2s ease-in;
}

.read-more:hover{
	color: var(--secondary-color)!important;
}

.swiper{
	width: 100%;
	height: 100vh;
}

.swiper-slide{
	height: 100%!important;
}

input[type=text], input[type=email], input[type=tel], textarea {
	background-color: var(--white-color);
	border: none;
}

input[type=submit] {
	background-color: var(--primary-color);
	border: none;
	color: #fff;
	padding: 15px 40px;
}

input[type=submit]:hover {
	background-color: var(--secondary-color);
}

/* Header Section */
.custom_logo {
	z-index: 10;
	position: relative;
}

header {
	z-index: 100;
	position: absolute;
	width: 100%;
}

.header {
	    transition: 0.4s;
}

.custom_logo img {
	width: 100%;
	height: auto
}

.topheader {
	background-color: var(--grey-color);
}

.breadcrumbs {
	font-size:18px;
	font-weight: bold;
}

.sticky-header {
	position: fixed;
    background: var(--primary-color);
    transition: 0.4s;
}


.sticky-header .main-navigation a {
	color: var(--white-color) !important;
}

#diensten__overlay--container{
	width: 100vw;
	height: 100vh;
	background-color: var(--primary-color);
	position: fixed;
	top: -80%;
	left: 0;
	z-index: 99;
	opacity: 0;
	transition: all .3s ease-in;
}

.diensten--active{
	top: 0 !important;
	opacity: 1!important;
}

.dienst{
	width: 25%;
	padding: 50px;
	border-right: solid 1px var(--white-color);
	margin: 30px 0px;
}

.dienst h2, .dienst p{
	color: var(--white-color);
}

.dienst h2{
	font-size: 20px;
}

.dienst p{
	font-size: 16px;
}

.dienst a{
	color: var(--white-color)!important;
	position: relative;
	margin-left: 40px;
	padding-left: 5px;
}

.dienst a::before{
 content: '';
 position: absolute;
 left: -17%;
 top: 50%;
 width: 40px;
 height: 2px;
 background-color: var(--secondary-color);
}

.dienst:nth-child(4n + 4){
	border-right: unset;
}

/* Banner Section */
#videobg, .wp-video {
  position: absolute;
  right: 0;
  top: 0;
   width: 100vw;
	height: 100vh;
  object-fit: cover;
  	z-index: 0;
}

#banner {
	height: 100vh;
}

#banner  h1 {
	color: #fff;
	text-transform: uppercase;
}

#banner span {
	color: #fff;
}

#banner .bannercontent {
 position: absolute;
 top: 25%;
}

#banner .bannercontent h1 span {
	font-size: 80px;
	color: var(--secondary-color);
	font-family: 'Lucida Bright';
	font-weight: 300;
}

#banner  h1 {
	color: var(--white-color);
	line-height: 55px;
	font-weight: 200;
}

#banner span {
	color: var(--white-color);
}

#banner .bannerblocks {
	position: absolute;
	width: 100%;
	bottom: 0;
	background-color: rgba(15,30,56,0.6);
	padding: 50px 0;
}

#banner .bannerblocks span {
	color: var(--white-color);
	font-size: 20px;
	font-weight: 800;
}

#banner .bannerblocks p,  #banner .bannerblocks a {
	color: var(--white-color);
	font-size: 16px;
	font-weight: 300;
}

#banner, #bannerindex{
	position: relative;
}

.overlay{
	height: 100%;
	width: 100%;
	background-color: var(--primary-color);
	opacity: 0.6;
	position: absolute;
	top: 0;
} 
.read-more{
	position: relative;
	margin-left: 40px;
	padding-left: 5px;
}
.read-more::before{
	content: '';
	position: absolute;
	left: -15%;
	top: 50%;
	width: 40px;
	height: 2px;
	background-color: var(--secondary-color);
   }

/* About Section */

#about {
	background: url('./img/startpagina.png') bottom right no-repeat;
	padding-bottom: 350px;
	margin-bottom: 50px;
	margin-top: -35px;
}

.aboutblock {
	background-color: #F8F9FB;
	padding: 10% 15%;
	border-top: solid 10px var(--secondary-color);
	margin-top: 35px;
}

.aboutblock span {
	color: var(--secondary-color);
}

.aboutblock p{
	color: #A4A4A4;
	line-height: 40px;
	margin-top: 50px;
}

/* Excellences Section */
#excellences {
	background-color: var( --sand-25);
	height: 600px;
}


/* Slider Section */
.slider-nav .slick-current {
	background-color: var(--fitforfuture-color);
	padding: 40px;
	color: #fff;
	margin: 0 30px;
}

.slider-nav .slick-current h3, .slider-nav .slick-current p { 
	color: var(--white-color);
}

.slider-logo {
	width: 300px;
	filter: grayscale(100%);
}

.slick-current .slider-logo {
	filter: grayscale(0%);
}

.slick-slide img {
    display: block;
    width: 100%;
    height: 250px;
    object-fit: cover;
	filter: grayscale(100);
		transition: 0.4s;
}


.slick-slide:hover img {
	filter: grayscale(0);
	transition: 0.4s;
}

#services {
	background-image: url('./img/bg-vakgebieden.png');
	/* filter: grayscale(100); */
	padding-bottom: 350px;
	/* margin-bottom: 50px; */
	
}

#services .read-more{
	margin-left: 0!important;
	color: var(--secondary-color)!important;
}

#services .read-more::before{
	left: -40%!important;
}

.serviceblock {
	background-color: #F8F9FB;
	display: flex;
	padding: 125px 10%;
	flex-direction: column;
	justify-content: space-between;
	height: 650px;
	margin-top: -200px;
}

.serviceblock p{
	color: #A4A4A4;
	line-height: 40px;
}

.slick-next, .slick-prev{
	transition: all .2s ease-in-out;
}
.slick-next:hover, .slick-prev:hover{
	background-color: #F8F8F8!important;
	color: var(--black-color)!important;
}

/* Team */
#team {
	padding: 150px 0;
	margin-bottom: 200px;
}

#team a {
	color: var(--black-color);
}


#team h2 {
	text-transform: initial;
	color: var(--primary-color);
}
/* ... */

